created Login Frontend

--- a/login/login.html
+++ b/login/login.html
@@ -24,7 +24,7 @@
       <input type="tel" id="phone" required /> -->
 
       <!-- email -->
-      <label for="email">email</label>
+      <label for="email">Email</label>
       <input type="tel" id="email" required />
 
       <!-- pass -->
