--- a/login/login.html
+++ b/login/login.html
@@ -37,6 +37,9 @@
       <!-- text -->
       <p>New here ? <a href="/signup/signup.html">SignUp Now</a></p>
 
+      <!-- text -->
+      <p>Forgot Password <a href="#">Reset Here</a></p>
+
       <!-- error text -->
       <p class="hidden error" id="error-message"></p>
     </form>
