fetch all msg from backend

--- a/chatApp/chatApp.html
+++ b/chatApp/chatApp.html
@@ -33,30 +33,25 @@
         </div>
 
         <!-- Received msg  -->
-        <div class="message received-message">
+        <!-- <div class="message received-message">
           <h3>username</h3>
           <p class="msg-content">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
           </p>
-        </div>
+        </div> -->
 
         <!-- joined chat  -->
-        <div class="userstatus joined">user joined</div>
+        <!-- <div class="userstatus joined">user joined</div> -->
 
         <!-- leaved chat -->
-        <div class="userstatus leaved">user Leaved</div>
+        <!-- <div class="userstatus leaved">user Leaved</div> -->
       </div>
-
-      <!-- msg box -->
-      <div class="msg-writing">
-        <textarea
-          id="userMsg"
-          cols="20"
-          placeholder="write your message here"
-        ></textarea>
-        <div class="mdg-send-wrap">
-          <button id="sendMsg">send</button>
-        </div>
+    </div>
+    <!-- msg box -->
+    <div class="msg-writing">
+      <textarea id="userMsg" placeholder="write your message here"></textarea>
+      <div class="mdg-send-wrap">
+        <button id="sendMsg">send</button>
       </div>
     </div>
 
