calling the API from the frontend every 1 second.

--- a/chatApp/chatApp.html
+++ b/chatApp/chatApp.html
@@ -25,12 +25,12 @@
         <!-- scrollable chat box  -->
 
         <!-- send message -->
-        <div class="message send-message">
+        <!-- <div class="message send-message">
           <h3>username</h3>
           <p class="msg-content">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
           </p>
-        </div>
+        </div> -->
 
         <!-- Received msg  -->
         <!-- <div class="message received-message">
