--- a/chatApp/chatApp.html
+++ b/chatApp/chatApp.html
@@ -17,7 +17,7 @@
       <div id="group-list">
 
         <!-- temp start -->
-        <div class="group">
+        <!-- <div class="group">
           <h3>gropu name</h3>
           <p class="groupId">0012</p>
         </div>
@@ -56,7 +56,7 @@
         <div class="group">
           <h3>gropu name</h3>
           <p class="groupId">0012</p>
-        </div>
+        </div> -->
 
         <!-- temp data end for scroll -->
       </div>
