--- a/chatApp/chatApp.html
+++ b/chatApp/chatApp.html
@@ -16,8 +16,10 @@
       <!-- scrollable list -->
       <div id="group-list">
 
+        
+
         <!-- temp start -->
-        <!-- <div class="group">
+        <div class="group" onclick="fetchGroupMsg(id)">
           <h3>gropu name</h3>
           <p class="groupId">0012</p>
         </div>
@@ -56,7 +58,7 @@
         <div class="group">
           <h3>gropu name</h3>
           <p class="groupId">0012</p>
-        </div> -->
+        </div>
 
         <!-- temp data end for scroll -->
       </div>
