--- a/chatApp/chatApp.html
+++ b/chatApp/chatApp.html
@@ -27,15 +27,15 @@
 
       <!-- msg box -->
 
-      <form class="msg-writing" enctype="multipart/form-data" id="msg-form">
+      <div class="msg-writing">
         <textarea
           id="userMsg"
           name="message"
           placeholder="write your message here"
         ></textarea>
         <input type="file" name="file" id="userFile" />
-        <button id="sendMsg" type="submit">send</button>
-      </form>
+        <button id="sendMsg">send</button>
+      </div>
     </div>
   </body>
   <script
